Fix gap between carousel and top bar

--- a/streetfarer/static/css/streetfarer.css
+++ b/streetfarer/static/css/streetfarer.css
@@ -23,6 +23,7 @@ button {
 
 .header{
 	width: 100%;
+	/*This is kind of awkward*/
 	margin-bottom: 0.5vh;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -81,7 +82,7 @@ button {
 #logo_btn{
 	position: relative;
 	float: left;
-	height: 80px;
+	height: 31px;
 	width: 190px;
 	background: transparent;
 }
@@ -104,7 +105,6 @@ button {
 
 #select_btn{
 	position: relative;
-	left: -150px;
 	float: left;
 	display: block;
 	width: 170px;
@@ -197,7 +197,7 @@ button {
 }
 
 #refresh-btn {
-	margin-left: -90px;
+	margin-left: 50px;
 	position: relative;
 	top:1px;
 	/*slightly mis-aligned?*/
